--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0-alpha02"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.2"
+
     }
 }
 plugins {
